--- a/style.css
+++ b/style.css
@@ -1,13 +1,5 @@
-h1 {
-    position: fixed;
-    top: 0; 
-    width: 100%;
-    text-align: center;
-    color: #1a6060;
-    background-color: #ffffff; 
-    z-index: 999;
-    padding: 10px 0;
-    margin: 0;
+*{
+    font-family: Times 'Times New Roman', Times, serif ;
 }
 
 .menu-container ul {
@@ -40,40 +32,98 @@ h1 {
     background-color: #0a3737;
 }
 
-
-.content {
-    margin-top: 80px; 
+#main{
+    color: white;
 }
 
-
-h3 {
-    margin-top: 30px;
-    margin-bottom: 10px;
-    font-size: 20px;
-}
-
-ol {
-    margin-top: 10px;
-    margin-bottom: 20px;
-    padding-left: 40px;
-}
-
-ol li {
-    margin-bottom: 10px;
-}
-
-table, th, td {
-    border: 1px solid black;
-    padding: 15px;
+h1 {
+    position: fixed;
+    top: 0; 
+    width: 100%;
     text-align: center;
+    color: #1a6060;
+    background-color: #ffffff; 
+    z-index: 999;
+    padding: 10px 0;
+    margin: 0;
+}
+
+h1 + img {
+    margin-top: 65px; 
+    height: 350px; 
+}
+
+#reasons, #adress, #contacts, #questions{
+    font-size: 20px;
+    text-align: center;
+    color:  #0a3737; 
+    font-weight: bold;
+}
+
+div > ol{
+    text-align: center; 
+}
+
+ol li, ul li {
+    list-style-position: inside;
+    margin-bottom: 5px;
+    font-size: 17px;
+}
+
+caption{
+    font-size: 20px; 
+    text-align: center;
+}   
+
+.table-container {
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    height: 100%; 
+}
+
+table {
+    border-collapse: collapse; 
+}
+
+th, td {
+    padding: 10px; 
+    border: 2px solid #000; 
 }
 
 tr:nth-child(odd) {
     background-color: #D6EEEE;
 }
 
+#firstTable{
+    background-color:#3a7979; 
+    color: white;
+}
 
-table, th, td {
-    border: 2px solid #0a3737;
+#contacts2{
+    font-size: 20px;
+    margin-left: 50px;
+}
+
+#contacts3{
+    margin-left: 500px;
+}
+
+.form{
+    text-align: center;
+    font-size: 18px;
+}
+
+input[type='text'] {
+    width: 300px; 
+    height: 35px;
+}
+
+input[type="submit"] {
+    width: 100px; 
+    height: 45px;
+}
+
+footer{
     text-align: center;
 }
